infra/homelab/argocd/argocd_ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-ingress
  namespace: argocd
spec:
  entryPoints:
  - websecure
  routes:
    # Intranet access (for now) and valid credentials required.
    # Configuration required in Authentik Proxy provider.
  - kind: Rule
    match: Host(`argocd.int.1earn.ing`)
    # priority: 10
    # middlewares:
    #   - name: authentik
    #     namespace: authentik
    services:
    - kind: Service
      name: argocd-server
      passHostHeader: true
      port: 80

    # Redirects for Authentik Outpost
  # - kind: Rule
  #   match: Host(`argocd.int.1earn.ing`) && PathPrefix(`/outpost.goauthentik.io/`)
  #   priority: 15
  #   services:
  #   - kind: Service
  #     namespace: authentik
  #     name: ak-outpost-authentik-embedded-outpost
  #     port: 9000

  tls:
    secretName: argocd-ingress-cert-secret
